# parakeet_rocm

./: .coderabbit.yaml  .dev-cheatsheet.md  .dockerignore  .env.example  .gitignore  AGENTS.md  DEADLOCK_FIX_DETAILS.md  DOCKER_DEVELOPMENT.md  Dockerfile  Dockerfile.dev  FREEZE_FIX_SUMMARY.md  README.md  TESTING.md  TEST_REORGANIZATION_SUMMARY.md  VERSIONS.md  code-review-report.md  docker-compose.dev.yaml  docker-compose.yaml  project-overview.md  pyproject.toml  pyproject.toml.bak  requirements-agent.txt  requirements-all-nh-nm.txt  requirements-all-nh.txt  requirements-all.txt
.github/PULL_REQUEST/: pr-feat-api-model-auth-merge.md
.github/workflows/: codeql.yml
.windsurf/rules/: coding-style-guide.md  environment-variables.md
docs/: QUALITY_ANALYSIS.md  TEST_MARKERS_SUMMARY.md  TEST_SUITE_REORGANIZATION.md  hip_python_migration_plan.md  test-markers.md  test-suite-organization.md
parakeet_nemo_asr_rocm/: cli.py
parakeet_nemo_asr_rocm/chunking/: chunker.py  merge.py
parakeet_nemo_asr_rocm/formatting/: _csv.py  _jsonl.py  _srt.py  _tsv.py  _vtt.py  refine.py
parakeet_nemo_asr_rocm/integrations/: stable_ts.py
parakeet_nemo_asr_rocm/models/: parakeet.py
parakeet_nemo_asr_rocm/timestamps/: adapt.py  segmentation.py  word_timestamps.py
parakeet_nemo_asr_rocm/transcription/: cli.py  file_processor.py  utils.py
parakeet_nemo_asr_rocm/utils/: audio_io.py  constant.py  env_loader.py  file_utils.py  watch.py
parakeet_rocm/: __init__.py  __main__.py  cli.py  config.py  transcribe.py
parakeet_rocm/api/: __init__.py  app.py  auth.py  mapping.py  routes.py  schemas.py
parakeet_rocm/benchmarks/: __init__.py  collector.py
parakeet_rocm/chunking/: __init__.py  chunker.py  merge.py
parakeet_rocm/formatting/: __init__.py  _csv.py  _json.py  _jsonl.py  _srt.py  _tsv.py  _txt.py  _vtt.py  refine.py  srt_quality.py
parakeet_rocm/integrations/: stable_ts.py
parakeet_rocm/models/: __init__.py  parakeet.py
parakeet_rocm/timestamps/: __init__.py  adapt.py  models.py  segmentation.py  word_timestamps.py
parakeet_rocm/transcription/: __init__.py  cli.py  file_processor.py  utils.py
parakeet_rocm/utils/: __init__.py  audio_io.py  cancel.py  constant.py  env_loader.py  file_utils.py  gpu_runtime.py  logging_config.py  watch.py
parakeet_rocm/webui/: __init__.py  __main__.py  app.py  cli.py
parakeet_rocm/webui/core/: __init__.py  job_manager.py  session.py
parakeet_rocm/webui/ui/: __init__.py  theme.py
parakeet_rocm/webui/ui/components/: __init__.py
parakeet_rocm/webui/ui/pages/: __init__.py
parakeet_rocm/webui/utils/: __init__.py  metrics_formatter.py  presets.py  zip_creator.py
parakeet_rocm/webui/validation/: __init__.py  file_validator.py  schemas.py
scripts/: __init__.py  analyze_agents_tokens.py  clean_codebase.sh  clean_codebase_sorted.sh  export_requirements.sh  hf_models.py  local-ci.sh  parakeet_gradio_app.py  parakeet_streamlit_app.py  pr-draft.sh  single_run.sh  srt_diff_report.py  srt_diff_three.sh  test-api.sh  transcribe_and_diff.py  transcribe_and_diff.sh  transcribe_three.sh
tests/: __init__.py  conftest.py  test_adapt_core.py  test_audio_io.py  test_chunker.py  test_cli_unit.py  test_config.py  test_env_loader.py  test_file_processor.py  test_file_utils.py  test_formatting.py  test_merge.py  test_refine.py  test_segmentation_and_formatters.py  test_segmentation_core.py  test_stable_ts.py  test_transcribe_and_diff.py  test_watch_and_file_utils.py  test_word_timestamps.py
tests/benchmarks/: __init__.py  test_cli_benchmark_flag.py  test_collector.py
tests/e2e/: __init__.py  test_srt_diff_report.py  test_transcribe.py  test_transcribe_and_diff.py
tests/integration/: __init__.py  test_api_integration.py  test_audio_io.py  test_cli.py  test_file_processor.py  test_file_utils.py  test_stable_ts.py  test_watch_and_file_utils.py
tests/slow/: __init__.py
tests/unit/: __init__.py  test_adapt_core.py  test_api_app.py  test_api_mapping.py  test_api_routes.py  test_api_schemas.py  test_audio_io_security.py  test_benchmarks_collector.py  test_cancellation_stabilization.py  test_cancellation_transcription.py  test_chunker.py  test_cli_unit.py  test_config.py  test_constant.py  test_env_loader.py  test_file_processor_merge.py  test_filename_validation.py  test_formatting.py  test_logging_config.py  test_merge.py  test_models_parakeet.py  test_refine.py  test_refine_security.py  test_segmentation_and_formatters.py  test_segmentation_core.py  test_srt_quality.py  test_timestamps_adapt.py  test_transcription_cli.py  test_transcription_utils.py  test_utils_watch.py  test_webui_app.py  test_webui_job_manager.py  test_webui_lazy_imports.py  test_webui_session.py  test_webui_utils.py  test_webui_validation.py  test_word_timestamps.py
tests/unit/utils/: test_gpu_runtime.py
tests/unit/webui/: __init__.py  test_app.py
tests/unit/webui/core/: __init__.py  test_job_manager.py  test_session.py
tests/unit/webui/ui/: __init__.py  test_theme.py
tests/unit/webui/utils/: __init__.py  test_presets.py  test_zip_creator.py
tests/unit/webui/validation/: __init__.py  test_file_validator.py  test_schemas.py
tests/webui/: test_job_manager_metrics.py  test_metrics_tab.py
to-do/: BENCHMARK_TESTS_TDD_STATUS.md  BUGFIX_FILE_UPLOAD.md  BULK_DOWNLOAD_IMPLEMENTATION.md  DEV_SETUP_SUMMARY.md  FEATURE_SUMMARY_BULK_DOWNLOAD.md  LOGGING_IMPLEMENTATION.md  PROGRESS_TRACKING_IMPLEMENTATION.md  TEST_REORGANIZATION_SUMMARY.md  WEBUI_CONSTANTS_UPDATE.md  WEBUI_DEFAULT_PRESET_UPDATE.md  WEBUI_UX_IMPROVEMENT_PLAN.md  benchmark-enhancement-comprehensive.md  graceful-cancellation-transcription.md  gradio-webui-integration-plan.md  implement-gradio-webui-module.md  project-improvements-v2.md  setup_guide.md  solid-principles-analysis.md  solid-refactoring-improvements.md  srt-improvement-report.md  webui-benchmark-metrics-tab.md  webui-feature-parity-implementation.md
