[project]
name = "parakeet-rocm"
version = "0.8.2"
description = "ASR inference service for NVIDIA Parakeet models on AMD ROCm GPUs"
authors = [{ name = "elvee" }]
requires-python = ">=3.10,<3.11"

# ------------------------------
# Dependencies
# ------------------------------
dependencies = [
  "typer[all]>=0.16.0",
  "rich>=13.7.1,<14.0.0",
  # ---- NeMo requirements.txt ----
  "fsspec==2024.12.0",
  "huggingface_hub>=0.24",
  "numba",
  "numpy>=1.22",
  # "onnx>=1.7.0",
  "protobuf~=5.29.5",
  "python-dateutil",
  "ruamel.yaml",
  "scikit-learn",
  "setuptools>=70.0.0",
  "tensorboard",
  "text-unidecode",
  # "torch==2.7.1",
  # "torchaudio==2.7.1",
  "tqdm>=4.41.0",
  "wget",
  "wrapt",

  # ---- NeMo requirements_asr.txt ----
  "braceexpand",
  "editdistance",
  "einops",
  "jiwer>=3.1.0,<4.0.0",
  "kaldi-python-io",
  "lhotse!=1.31.0",
  "librosa>=0.10.1",
  "marshmallow",
  "optuna",
  "packaging",
  "pyannote.core",
  "pyannote.metrics",
  "pydub",
  "pyloudnorm",
  "resampy",
  "scipy>=0.14",
  "soundfile",
  "sox<=1.5.0",
  "texterrors<1.0.0",
  "whisper_normalizer",
  "nemo-toolkit[asr]>=2.4.0",
  "python-dotenv>=1.1.1",
  "pydantic>=2.7.0",
  "stable-ts-whisperless>=2.19.0",
  "silero-vad>=5.1.2",
  "demucs>=4.0.1",
]

[project.optional-dependencies]
rocm = [
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "onnxruntime-rocm==1.21.0",
]
webui = [
    "gradio>=5.39.0",
    "streamlit>=1.47.1",
]
dev = [
    "ruff>=0.12.5",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

# ------------------------------
# Scripts
# ------------------------------
[project.scripts]
parakeet-rocm = "parakeet_rocm.cli:app"
srt-diff-report = "scripts.srt_diff_report:app"

# ------------------------------
# Build
# ------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parakeet_rocm"]

[tool.pdm]
distribution = true

# ------------------------------
# Ruff
# ------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
preview = true

[tool.ruff.lint]
# Enable rule categories per AGENTS.md
select = [
  "F",    # Pyflakes - correctness
  "E",    # pycodestyle errors - PEP 8 surface
  "W",    # pycodestyle warnings - PEP 8 surface
  "N",    # pep8-naming - naming conventions
  "I",    # isort - import order & style
  "D",    # pydocstyle - docstring content & style
  "DOC",  # pydoclint - docstring validation
  "TID",  # flake8-tidy-imports - import hygiene
  "UP",   # pyupgrade - modern Python upgrades
  "FA",   # flake8-future-annotations - future annotations
  "ANN",  # pyright - type annotations
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D100",  # Missing docstring in public module
  "D103",  # Missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["parakeet_rocm"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-q",
  "--strict-markers",
#  "--maxfail=1",
#  "--cov=parakeet_rocm",
#  "--cov-report=term-missing:skip-covered",
#  "--cov-report=xml"
]

testpaths = ["tests/unit", "tests/integration", "tests/e2e", "tests/slow"]
xfail_strict = true
pythonpath = ["."]

# Test markers per /test-suite workflow
markers = [
  "integration: crosses filesystem, network, subprocess, or GPU boundaries",
  "slow: long-running or resource-heavy tests (>5s)",
  "e2e: full workflow smoke tests",
  "gpu: requires GPU or accelerator hardware",
]

# Filter warnings
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
]

# ------------------------------
# PDM sources
# ------------------------------
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true
type = "index"
exclude_packages = ["torch", "torchaudio", "onnxruntime-rocm", "pytorch-triton-rocm", "nvidia-*"]
include_packages = ["*"]

[[tool.pdm.source]]
name = "rocm-wheels"
url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.2/"
verify_ssl = true
type = "find_links"
include_packages = ["torch", "torchaudio", "onnxruntime-rocm", "pytorch-triton-rocm"]
